--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
             "@radix-ui/react-toggle": "^1.1.2",
             "@radix-ui/react-toggle-group": "^1.1.2",
             "@radix-ui/react-tooltip": "^1.1.8",
+            "@splidejs/react-splide": "^0.7.12",
             "@types/styled-components": "^5.1.36",
             "class-variance-authority": "^0.7.1",
             "clsx": "*",
