--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "nodemailer": "^7.0.11",
+            "ogl": "^1.0.11",
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
